--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -147,9 +147,6 @@
                         class="fas fa-tachometer-alt me-1"></i>Dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="#tareas"><i class="fas fa-list me-1"></i>Mis Tareas</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal"
-                                        data-bs-target="#calendarioModal"><i class="fas fa-calendar me-1"></i>Calendario</a>
-                </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
@@ -319,8 +316,8 @@
             </div>
             <div class="col-md-3">
                 <h6 class="fw-bold">Síguenos</h6>
-                <div class="d-flex">
-                    <a href="https://facebook.com" target="_blank" class="text-light fs-5 me-3"><i
+                <div class="d-flex justify-content-center mt-2">
+                <a href="https://facebook.com" target="_blank" class="text-light fs-5 me-3"><i
                             class="fab fa-facebook"></i></a>
                     <a href="https://twitter.com" target="_blank" class="text-light fs-5 me-3"><i
                             class="fab fa-twitter"></i></a>
